# pu-dwr-combustion

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  codemeta.json
cmake/: AddAdditionalCompilerWarnings.cmake  CreateDetailedLog.cmake  InvokeAutopilot.cmake
include/DTM++/base/: LogStream.hh  Problem.hh
include/DTM++/io/: DataOutput.tpl.hh
include/DTM++/types/: slabs.tpl.hh  storage_data_trilinos_vectors.tpl.hh
include/combustion/: Combustion_DWR__cGp_dG0__cGq_dG0.tpl.hh
include/combustion/DirichletBoundary/: DirichletBoundaries.hh  DirichletBoundary_Selector.tpl.hh
include/combustion/ErrorEstimator/: ErrorEstimators.hh  EstimatorArgument.hh  GeneralPUDoFErrorEstimator.tpl.hh
include/combustion/InitialValue/: InitialValue_SchmichVexler.tpl.hh  InitialValue_Selector.tpl.hh  InitialValues.hh
include/combustion/NeumannBoundary/: NeumannBoundaries.hh  NeumannBoundary_Selector.tpl.hh
include/combustion/RobinBoundary/: RobinBoundaries.hh  RobinBoundary_Selector.tpl.hh
include/combustion/assembler/: L2_ArrheniusDerivAssembly.tpl.hh  L2_ArrheniusFunctionAssembly.tpl.hh  L2_Je_reaction_rate_Assembly.tpl.hh  L2_Je_rod_species_concentration_Assembly.tpl.hh  L2_LaplaceAssembly.tpl.hh  L2_LaplaceMultAssembly.tpl.hh  L2_MassAssembly.tpl.hh  L2_MassMultAssembly.tpl.hh  L2_NeumannConstrainedAssembly.tpl.hh  L2_RobinConstrainedAssembly.tpl.hh  L2_RobinMatrixAssembly.tpl.hh  L2_RobinMatrixMultAssembly.tpl.hh
include/combustion/grid/: Grid_DWR.tpl.hh  Grid_DWR_Dirichlet_Neumann_and_Robin.tpl.hh  Grid_DWR_Selector.tpl.hh  Grids.hh  TriaGenerator.tpl.hh
include/combustion/parameters/: ParameterHandler.hh  ParameterSet.hh
include/combustion/types/: boundary_id.hh
input/: default.prm  rod_pu.prm
source/: main.cc
source/DTM++/base/: LogStream.cc  Problem.cc
source/DTM++/io/: DataOutput.inst.in  DataOutput.tpl.cc
source/combustion/: Combustion_DWR__cGp_dG0__cGq_dG0.inst.in  Combustion_DWR__cGp_dG0__cGq_dG0.tpl.cc
source/combustion/DirichletBoundary/: DirichletBoundary_Selector.inst.in  DirichletBoundary_Selector.tpl.cc
source/combustion/ErrorEstimator/: GeneralPUDoFErrorEstimator.inst.in  GeneralPUDoFErrorEstimator.tpl.cc
source/combustion/InitialValue/: InitialValue_SchmichVexler.inst.in  InitialValue_SchmichVexler.tpl.cc  InitialValue_Selector.inst.in  InitialValue_Selector.tpl.cc
source/combustion/NeumannBoundary/: NeumannBoundary_Selector.inst.in  NeumannBoundary_Selector.tpl.cc
source/combustion/RobinBoundary/: RobinBoundary_Selector.inst.in  RobinBoundary_Selector.tpl.cc
source/combustion/assembler/: L2_ArrheniusDerivAssembly.inst.in  L2_ArrheniusDerivAssembly.tpl.cc  L2_ArrheniusFunctionAssembly.inst.in  L2_LaplaceAssembly.inst.in  (+20 more)
(+10 files in other folders)
